Try fix for stretched images on Safari

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -573,6 +573,7 @@ blockquote {
 
   .column {
     width: 40%;
+    height: auto;
     border-radius: 15px;
   }
 
